--- a/dnf.csproj
+++ b/dnf.csproj
@@ -58,7 +58,10 @@
     <Compile Include="addons\**\*.cs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Hocon.Configuration"/>
+    <PackageReference Include="Hocon.Configuration">
+      <Version>2.0.3</Version>
+    </PackageReference>
+    <PackageReference Include="System.IO.Compression"/>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
