make animeconfig change configmanager with sample flat two type save project, exe, dll path in gamemanager rename coroutine callback on task show memory in debug collect error config in error.cfg resourcemanager loading for project by file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build",
-            "program": "D:/tools/Godot_v3.2.1-stable_mono_win64/Godot_v3.2.1-stable_mono_win64.exe",
+            "program": "c:/bin/Godot/Godot.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
