--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -4,9 +4,8 @@ name="Windows Desktop"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
-export_filter="resources"
-export_files=PoolStringArray(  )
-include_filter="config/*"
+export_filter="all_resources"
+include_filter="res.txt"
 exclude_filter=""
 export_path="bin/dnf.exe"
 patch_list=PoolStringArray(  )
