--- a/dnf.csproj
+++ b/dnf.csproj
@@ -66,6 +66,9 @@
     <PackageReference Include="Hocon.Configuration">
       <Version>2.0.3</Version>
     </PackageReference>
+    <PackageReference Include="ini-parser">
+      <Version>2.5.2</Version>
+    </PackageReference>
     <PackageReference Include="System.IO.Compression" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
