--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -17,7 +17,7 @@
         {
             "label": "build",
             "type": "shell",
-            "command": "C:/Program Files (x86)/Microsoft Visual Studio/2019/BuildTools/MSBuild/Current/Bin/amd64/MSBuild.exe",
+            "command": "C:/Program Files (x86)/Microsoft Visual Studio/2017/Enterprise/MSBuild/15.0/Bin/amd64/MSBuild.exe",
             "args": [
                 "/p:Configuration=Tools;Platform=Any CPU;GenerateFullPaths=true",
                 "/t:Build;"
